# research2025

./: .gitattributes  .gitignore  .gitmodules  README.md  env-share  pyproject.toml
01-setup/notebooks/: In-Class-01.ipynb  Setup LLMs.ipynb
02-rag-agents/notebooks/: RAG Agent.ipynb
02-rag-agents/src/: hai_query_engine.py
03-knowledge-agents/notebooks/: CRM Analysis.ipynb  In-Class-03.ipynb  eval_questions_10q.txt  train_questions_10q.txt
03-react-agents/notebooks/: CRM Analysis.ipynb  eval_questions_10q.txt  finetuning_events_10q.jsonl  train_questions_10q.txt
04-evaluations/data/: eval_dataframe.csv  eval_dataframe.parquet
04-evaluations/notebooks/: Evaluations.ipynb  Synthetic Data Generation.ipynb
04-evaluations/src/: agent.py  human_agent.py  personal_agent.py
05-image-rag/notebooks/: Image RAG.ipynb  RAG Evaluation.ipynb
06-advanced-rag/: pyproject.toml
06-advanced-rag/data/cities/: Boston.txt  Dallas.txt  San Francisco.txt
06-advanced-rag/notebooks/: In-Class-06.ipynb  In-Class-07.ipynb  Investigating Queries.ipynb  Pandas Query Engine.ipynb  Trailhead.ipynb  Vector Store.ipynb
06-advanced-rag/notebooks/data/: Seattle.txt
06-advanced-rag/notebooks/index/: default__vector_store.json  docstore.json  index_store.json
07-multi-agents/: pyproject.toml
07-multi-agents/src/: multiagents.py
08-reasoning/: README.md  pyproject.toml  reflexive_agent.py  reflexive_streamlit.py  thinking_agent.py  thinking_agent2.py  thinking_streamlit.py
08-reasoning/bioagents/: base.py  prompts.py  reflexive_agent.py  schemas.py  system1_agent.py  system1plus_agent.py  webagent.py  websearch_tool.py
08-reasoning/data/: medicalData.csv
08-reasoning/data/medical-o1-reasoning/: medical_o1_sft.json
08-reasoning/notebooks/: HuaTuoGPT + MedReason.ipynb  Validating Clinical Data.ipynb
09-agent-eval/: SETUP_GUIDE.md  main.py  pyproject.toml
09-agent-eval/atlas/agents/: ragas_evaluation_example.py  simple_agent.py  simple_agent_with_ragas.py
09-agent-eval/notebooks/: Agent Accuracy.ipynb
10-agent-memories/: complete_notebook_fix.py  debug_qdrant_connection.py  fix_notebook_cell.py  local_qdrant_setup.py  main.py  memory_blocks_fix.py  notebook_cell_fix.py  pyproject.toml  qdrant_memory_setup.py  simple_fix.py  simple_vector_store_issue.py  simplified_notebook_fix.py  vector_block_fix.py  working_memory_setup.py
10-agent-memories/notebooks/: Agent with Memories.ipynb  Mem0 Agents.ipynb  Memories.ipynb  Multi-Turn Agent Conversations.ipynb  Types of Memory.ipynb
11-openai-agents/: pyproject.toml
11-openai-agents/notebooks/: Simple Agent.ipynb
12-guardrails/: env.sample  pyproject.toml
12-guardrails/asdrp/agents/: keyword_guard_agent.py  math_guard_agent.py  simple_agent.py
13-langchain/: pyproject.toml
13-langchain/asdrp/agents/: lang_hello.py  lang_weather.py  open_weather.py
13-langchain/asdrp/graph/: graph_hello.py
13-langchain/asdrp/halo/: arxiv_agent.py  finance_agent.py  search_agent.py  wiki_agent.py
13-langchain/data/mmlu/high_school_physics/: dev-00000-of-00001.parquet  test-00000-of-00001.parquet  validation-00000-of-00001.parquet
13-langchain/notebooks/: MMLU Eval.ipynb
14-openagents/: .gitignore  pyproject.toml
14-openagents/asdrp/actions/finance/: finance_tools.py
14-openagents/asdrp/agents/singles/: finance_agent.py  geo_agent.py  web_agent.py
15-openagents/: pyproject.toml
15-openagents/asdrp/actions/finance/: finance_tools.py
15-openagents/asdrp/actions/geo/: geo_tools.py
15-openagents/asdrp/actions/search/: __init__.py  wiki_tools.py
15-openagents/asdrp/agents/: base.py
15-openagents/asdrp/agents/singles/: finance_agent.py  web_agent.py
15-openagents/asdrp/util/: config_loader.py
15-openagents/docs/: architecture.md  building-multi-agent-systems.md  smart-router.md
15-smartrouter/asdrp/agents/: __init__.py
15-smartrouter/asdrp/agents/routing/: __init__.py  smart_router.py
15-smartrouter/asdrp/agents/singles/: geo_agent.py  wiki_agent.py
15-smartrouter/asdrp/util/: agent_registry.py
15-smartrouter/config/: agents.yaml
15-smartrouter/docs/: README.md  design-patterns.md
projects/advanced-rag/: pyproject.toml
projects/advanced-rag/notebook/: CRM RAG Evaluation.ipynb
projects/advanced-rag/notebooks/: CRM RAG Evaluation.ipynb
projects/advanced-rag/notebooks/results/: eval_results_basic.json
projects/data/crm-eval/: multi_hop_abstract_testset.jsonl  multi_hop_specific_testset.jsonl  single_hop_specific_testset.jsonl
projects/evogames/: .gitignore  .replit  README.md  app.py  main.py  models.py  pyproject.toml  routes.py  simulation.py  social_dilemmas.py  utils.py
projects/evogames/static/css/: custom.css
projects/evogames/static/js/: chart-config.js  main.js  simulation-controller.js  social-dilemmas.js
projects/evogames/templates/: about.html  index.html  layout.html  social_dilemmas.html
projects/evogames/tests/: test_social_dilemmas.py
projects/memagents/: README.md  pyproject.toml
projects/memagents/asdrp/memory/: proposition_extraction_memory.py
projects/memagents/src/memagents/agents/: simple_agent.py
projects/reasoning/: README.md  bioreasoning.py  pyproject.toml
projects/reasoning/bioagents/agents/: __init__.py  base.py  bio_concierge.py  biomcp_agent.py  bioreasoner.py  chitchat_agent.py  reasoner.py  web_agent.py  webreasoner.py
projects/reasoning/bioagents/models/: citation.py  llms.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/wiki_image/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/wiki_image/0/segments/032256c5-9724-4c97-a067-37b6350d6ed2/: 000009.sst  000010.sst  000012.sst  IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/wiki_image/0/segments/255d6e99-112c-4abf-9192-f392d2874661/: IDENTITY  LOG  segment.json
qdrant_storage/collections/wiki_image/0/segments/74cd73e9-57dc-4d63-8677-68c7aa176889/: IDENTITY  LOG
qdrant_storage/collections/wiki_image/0/segments/9701602a-578e-4e4f-ae88-3f004133df54/: IDENTITY  LOG
(+28 files in other folders)
