[tool.poetry]
name = "research2025"
version = "0.1.0"
description = ""
authors = ["Phil Mui <thephilmui@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apify-client = "^1.9.2"
arcgis = "^2.4.0"
burr = {extras = ["start"], version = "^0.39.1"}
clip = {git = "https://github.com/openai/CLIP.git"}
ftfy = "^6.3.1"
geopy = "^2.4.1"
graphviz = "^0.20.3"
ipinfo = "^5.1.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
jupyter = "^1.1.1"
langchain-community = "^0.3.19"
llama-index-tools-mcp = "^0.1.0"
llama-index-core = "^0.12.18"
llama-index-embeddings-clip = "^0.3.1"
llama-index-llms-ollama = "^0.5.1"
llama-index-llms-openai = "^0.3.18"
llama-index-llms-openrouter = "^0.3.1"
llama-index-llms-openllm = "^0.4.1"
llama-index-embeddings-ollama = "^0.5.0"
llama-index-embeddings-openai = "^0.3.1"
llama-index-readers-file = "^0.4.4"
llama-index-finetuning = "^0.3.0"
loguru = "^0.7.3"
matplotlib = "^3.10.1"
python-dotenv = "^1.0.1"
ragas = {git = "https://github.com/explodinggradients/ragas"}
requests = ">=2.30.0,<2.32.0"
sacrebleu = "^2.5.1"
spacy = "^3.8.4"
tavily-python = "^0.5.1"
unstructured = {extras = ["md"], version = "^0.16.25"}
llama-index-multi-modal-llms-openai = "^0.5.0"
llama-index-vector-stores-qdrant = "^0.4.3"
qdrant-client = "^1.13.3"
regex = "^2024.11.6"
scikit-image = "^0.25.2"
tqdm = "^4.67.1"
wikipedia = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
