[tool.poetry]
name = "advanced-rag"
version = "0.1.0"
description = ""
authors = ["Phil Mui <pmui@salesforce.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
chromadb = "^0.6.3"
flagembedding = "^1.3.4"
llama-index-agent-openai = "^0.4.6"
llama-index-vector-stores-chroma = "^0.4.1"
llama-index-vector-stores-faiss = "^0.3.0"
llama-index-embeddings-ollama = "^0.6.0"
llama-index-embeddings-openai = "^0.3.1"
llama-index-experimental = "^0.5.4"
llama-index-llms-ollama = "^0.5.4"
llama-index-llms-openai = "^0.3.26"
llama-index-postprocessor-flag-embedding-reranker = "^0.3.0"
llama-index-readers-file = "^0.4.6"
llama-index-vector-stores-qdrant = "^0.5.0"
llama-parse = "^0.6.4.post1"
loguru = "^0.7.3"
pdfplumber = "^0.11.5"
python-dotenv = "^1.0.1"
pymupdf = "^1.25.4"
unstructured = {extras = ["inference", "local-inference"], version = "^0.17.2"}
faiss-cpu = "^1.10.0"
qdrant-client = "^1.13.3"
llama-index-postprocessor-colbert-rerank = "^0.3.0"
ragas = "^0.2.14"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
