[tool.poetry]
name = "multi-agents"
version = "0.1.0"
description = ""
authors = ["Phil Mui <pmui@salesforce.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index-core = "^0.12.25"
python-dotenv = "^1.1.0"
tavily-python = "^0.5.1"
llama-index-llms-openai = "^0.3.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
