[project]
name = "bioagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.13",
    "ipykernel>=6.29.5",
    "llama-index>=0.12.41",
    "llama-index-core>=0.12.41",
    "llama-index-llms-openai>=0.4.4",
    "llama-index-memory-mem0>=0.3.1",
    "llama-index-vector-stores-chroma>=0.4.2",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
]
