[project]
name = "lang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.20.0",
    "fastapi>=0.120.0",
    "fastparquet>=2024.11.0",
    "fsspec==2023.9.2",
    "ipykernel>=7.0.1",
    "langchain>=1.0.2",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langsmith[openai-agents]>=0.4.38",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.1.1",
    "ta>=0.11.0",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]
