[project]
name = "memagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index-core>=0.12.43",
    "llama-index-llms-openai>=0.4.7",
    "llama-index-vector-stores-qdrant>=0.6.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.3",
]
